--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
-<div id="elm"></div>
-<script>
-    var app = Elm.Main.init({
-        node: document.getElementById('elm')
-    });
-</script>
+<div class="container">
+    <h1>My ToDo App</h1>
+    <div id="elm"></div>
+    <script>
+        var app = Elm.Main.init({
+            node: document.getElementById('elm')
+        });
+    </script>
+</div>
 </body>
 </html>
